Partly fix T44025, pixelFormat retain was left, for 2.74 backport