intern/ghost/intern/GHOST_ContextCGL.mm
@@ -292,14 +292,16 @@ GHOST_TSuccess GHOST_ContextCGL::initializeDrawingContext()
 
 	[m_openGLView setPixelFormat:pixelFormat];
 
-	m_openGLContext = [[NSOpenGLContext alloc] initWithFormat:pixelFormat shareContext:s_sharedOpenGLContext];
+	m_openGLContext = [[NSOpenGLContext alloc] initWithFormat:pixelFormat shareContext:s_sharedOpenGLContext]; // +1 refCount to pixelFormat
 
 	if (m_openGLContext == nil)
 		goto error;
 
 	if (s_sharedCount == 0)
 		s_sharedOpenGLContext = m_openGLContext;
-
+	
+	[pixelFormat release]; // -1 refCount to pixelFormat
+	
 	s_sharedCount++;
 
 #ifdef GHOST_MULTITHREADED_OPENGL
